# OOP-MAI

./: .gitignore  CMakeLists.txt  a.out
lab1/: CMakeLists.txt  main.cpp  time_refactor.cpp  time_refactor.h
lab1/src/: main.cpp  vowel_deleter.cpp  vowel_deleter.h
lab1/test/: test.cpp  test06.cpp  test_vowel_deleter.cpp
lab2/: CMakeLists.txt
lab2/src/: MoneyBuilder.cpp  MoneyBuilder.h  main.cpp  money.cpp  money.h
lab2/test/: test.cpp
lab3/: CMakeLists.txt
lab3/lib/: Box.h  Fabric.h  Figure.h  Point.h  Rectangle.h  Triangle.h  Validator.h
lab3/src/: Box.cpp  Fabric.cpp  Figure.cpp  Point.cpp  Rectangle.cpp  Triangle.cpp  Validator.cpp  main.cpp
lab3/test/: Figure_test.cpp
lab4/: CMakeLists.txt
lab4/lib/: Box.h  Fabric.h  Figure.h  Point.h  Rectangle.h  Triangle.h  Validator.h  includes.h
lab4/src/: Box.inl  Fabric.inl  Figure.inl  Point.inl  Rectangle.inl  Triangle.inl  Validator.inl  main.cpp
lab4/test/: Figure_test.cpp
lab5/: CMakeLists.txt
lab5/lib/: allocator.h  vector.h
lab5/src/: main.cpp
lab5/tests/: allocator_tests.cpp  vector_tests.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/lib/: DeathAgregator.h  DeathHandler.h  Menu.h  NPC.h  UI.h  include.h
lab6/src/: DeathAgregator.cpp  DeathHandler.cpp  Menu.cpp  NPC.cpp  NPCFabric.cpp  Observer.cpp  ObserverConsolOutput.cpp  ObserverFileOutput.cpp  UI.cpp  Visitor.cpp
lab7/: CMakeLists.txt  log.txt  main.cpp  npc.txt
lab7/lib/: DeathHandler.h  FightHandler.h  Menu.h  NPC.h  NPCFabric.h  Observer.h  ObserverConsolOutput.h  ObserverFileOutput.h  UI.h  Visitor.h
lab7/src/: DeathHandler.cpp  FightHandler.cpp  Menu.cpp  NPC.cpp  UI.cpp
